--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "next build"
   },
   "dependencies": {
     "next": "latest",
@@ -11,3 +10,4 @@
     "react-dom": "18.2.0"
   }
 }
+
